--- a/Areas/Room/Views/Room/Index.cshtml
+++ b/Areas/Room/Views/Room/Index.cshtml
@@ -1,1 +1,196 @@
-﻿<h1>Hello room</h1>
+﻿<!-- #/ container -->
+<div class="container-fluid">
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-body card-modifed">
+                        <div class="d-flex justify-content-between align-items-center flex-wrap">
+                            <div class="status-info mb-2">
+                                <select id="room-status" class="form-select input-height"
+                                    aria-label="Chọn trạng thái phòng">
+                                    <option value="all">Room status</option>
+                                    <option value="available">Available </option>
+                                    <option value="rented">Rented</option>
+                                </select>
+                                <!-- Room Number Field -->
+                                <input class="input-height input-room" type="text" id="room-number"
+                                    placeholder="Enter number room" aria-label="Nhập số phòng">
+                                <!-- Search Button -->
+                                <a href="#" class="btn btn-primary btn-custom me-2">
+                                    <i class="fas fa-search"></i>
+                                    Search
+                                </a>
+                            </div>
+                            <div class="action-buttons mb-2">
+                                <a href="#" class="btn btn-primary me-2">
+                                    <i class="fas fa-plus"></i>
+                                    Add home
+                                </a>
+                                <a href="#" class="btn btn-info me-2">
+                                    <i class="fas fa-edit"></i>
+                                    Enter room from excel
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">87 - Hoàng Diệu</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">139 - Trường Trinh</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                            <div class="status-info mb-2">
+                                <span>Available 4</span> | <span>Rented 7</span>
+                            </div>
+                            <div class="action-buttons mb-2">
+                                <a href="#" class="btn btn-primary me-2 ">
+                                    <i class="fas fa-plus"></i> Add room
+                                </a>
+                                <a href="#" class="btn btn-info me-2 ">
+                                    <i class="fas fa-edit"></i> Update home
+                                </a>
+                                <a href="#" class="btn btn-danger ">
+                                    <i class="fas fa-trash"></i> Delete home
+                                </a>
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <!-- Cards are responsive now -->
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Special title treatment</h5>
+                                        <p class="card-text">With supporting text below as a natural lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Repeat similar blocks for other columns -->
+                        </div>
+                        <partial name="_Paging"></partial>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@* Link CSS*@
+@section AdditionalLinkCSS {
+    <link href="css/site.css" rel="stylesheet">
+}
+
+@* Link Javascript*@
+@section AdditionalLinkJavascript {
+    <script>
+        // Select all the nav links
+        const navLinks = document.querySelectorAll('.nav-link');
+        navLinks.forEach(link => {
+            link.addEventListener('click', function (event) {
+                // Remove 'active' class from all links
+                navLinks.forEach(link => link.classList.remove('active'));
+                // Add 'active' class to the clicked link
+                this.classList.add('active');
+            });
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+}
