--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,1 +1,1 @@
-.input-height{height:36px;border-radius:.25rem;border:1px solid #ccc}.input-room{margin:0 4px;padding:4px}.card .card-modifed{padding:1rem 1.81rem!important}
+.input-height{height:36px;border-radius:.25rem;border:1px solid #ccc}.input-room{margin:0 4px;padding:4px}.card .card-modifed{padding:1rem 1.81rem!important}.margin-room-update{margin-left:3px}
