--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,21 +8,12 @@
     <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_2.png">
-@*     <!-- Pignose Calender -->
-    <link href="./plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet">
-    <!-- Chartist -->
-    <link rel="stylesheet" href="./plugins/chartist/css/chartist.min.css">
-    <link rel="stylesheet" href="./plugins/chartist-plugin-tooltips/css/chartist-plugin-tooltip.css"> *@
-    
-    <!-- Datatable -->
-@*     <link href="./plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet"> *@
-
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_2.png">
     @RenderSection("AdditionalLinkCSS", required: false)
-
-    
     <!-- Custom Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    @* <link href="css/style.css" rel="stylesheet"> *@
+    <link rel="stylesheet" href="../css/style.css" />
+
 </head>
 
 <body>
@@ -50,10 +41,10 @@
         <div class="nav-header">
             <div class="brand-logo">
                 <a href="index.html">
-                    <b class="logo-abbr"><img src="images/logo.png" alt=""> </b>
-                    <span class="logo-compact"><img src="./images/logo-compact.png" alt=""></span>
+                    <b class="logo-abbr"><img src="../images/logo.png" alt=""> </b>
+                    <span class="logo-compact"><img src="../images/logo-compact.png" alt=""></span>
                     <span class="brand-title">
-                        <img src="images/logo-text.png" alt="">
+                        <img src="../images/logo-text.png" alt="">
                     </span>
                 </a>
             </div>
@@ -102,7 +93,7 @@
                                     <ul>
                                         <li class="notification-unread">
                                             <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="images/avatar/1.jpg"
+                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/1.jpg"
                                                     alt="">
                                                 <div class="notification-content">
                                                     <div class="notification-heading">Saiful Islam</div>
@@ -114,7 +105,7 @@
                                         </li>
                                         <li class="notification-unread">
                                             <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="images/avatar/2.jpg"
+                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/2.jpg"
                                                     alt="">
                                                 <div class="notification-content">
                                                     <div class="notification-heading">Adam Smith</div>
@@ -125,7 +116,7 @@
                                         </li>
                                         <li>
                                             <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="images/avatar/3.jpg"
+                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/3.jpg"
                                                     alt="">
                                                 <div class="notification-content">
                                                     <div class="notification-heading">Barak Obama</div>
@@ -137,7 +128,7 @@
                                         </li>
                                         <li>
                                             <a href="javascript:void()">
-                                                <img class="float-left mr-3 avatar-img" src="images/avatar/4.jpg"
+                                                <img class="float-left mr-3 avatar-img" src="../images/avatar/4.jpg"
                                                     alt="">
                                                 <div class="notification-content">
                                                     <div class="notification-heading">Hilari Clinton</div>
@@ -224,7 +215,7 @@
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative" data-toggle="dropdown">
                                 <span class="activity active"></span>
-                                <img src="images/user/1.png" height="40" width="40" alt="">
+                                <img src="../images/user/1.png" height="40" width="40" alt="">
                             </div>
                             <div class="drop-down dropdown-profile   dropdown-menu">
                                 <div class="dropdown-content-body">
@@ -333,6 +324,8 @@
             <div class="copyright">
                 <p>Copyright &copy; Designed & Developed by <a href="https://themeforest.net/user/quixlab">Bao Ngo Le
                         Gia</a> 2024</p>
+                <h1>@Url.Content("~/js/settings.js")</h1>
+
             </div>
         </div>
         <!--**********************************
@@ -345,12 +338,17 @@
     <!--**********************************
         Scripts
     ***********************************-->
-    <script src="plugins/common/common.min.js"></script>
+   @*  <script src="plugins/common/common.min.js"></script>
     <script src="js/custom.min.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/gleek.js"></script>
-    <script src="js/styleSwitcher.js"></script>
+    <script src="js/styleSwitcher.js"></script> *@
 
+    <script src="../plugins/common/common.min.js"></script>
+    <script src="../js/custom.min.js"></script>
+    <script src="../js/settings.js"></script>
+    <script src="../js/gleek.js"></script>
+    <script src="../js/styleSwitcher.js"></script>
 @*     <!-- Chartjs -->
     <script src="./plugins/chart.js/Chart.bundle.min.js"></script>
     <!-- Circle progress -->
