06 - Finshed designing Model & Database

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,19 +7,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_2.png">
     @RenderSection("AdditionalLinkCSS", required: false)
-    <!-- Custom Stylesheet -->
-    @* <link href="css/style.css" rel="stylesheet"> *@
     <link rel="stylesheet" href="../css/style.css" />
 
 </head>
 
 <body>
-    <!--*******************
-        Preloader start
-    ********************-->
+    @* Creating loading page annotaion *@
     <div id="preloader">
         <div class="loader">
             <svg class="circular" viewBox="25 25 50 50">
@@ -27,17 +22,10 @@
             </svg>
         </div>
     </div>
-    <!--*******************
-        Preloader end
-    ********************-->
-    <!--**********************************
-        Main wrapper start
-    ***********************************-->
-    <div id="main-wrapper">
 
-        <!--**********************************
-            Nav header start
-        ***********************************-->
+
+    <div id="main-wrapper">
+        @* Header navbar with logo *@
         <div class="nav-header">
             <div class="brand-logo">
                 <a href="index.html">
@@ -49,12 +37,8 @@
                 </a>
             </div>
         </div>
-        <!--**********************************
-            Nav header end
-        ***********************************-->
-        <!--**********************************
-            Header start
-        ***********************************-->
+
+        @* Header navbar Navbar with other part *@
         <div class="header">
             <div class="header-content clearfix">
                 <div class="nav-control">
@@ -246,12 +230,8 @@
                 </div>
             </div>
         </div>
-        <!--**********************************
-            Header end ti-comment-alt
-        ***********************************-->
-        <!--**********************************
-            Sidebar start
-        ***********************************-->
+
+        @* Sidebar part *@
         <div class="nk-sidebar">
             <div class="nk-nav-scroll">
                 <ul class="metismenu" id="menu">
@@ -287,7 +267,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="Payment" asp-action="Index" asp-controller="Payment">
+                        <a asp-area="InvoiceAndPayment" asp-action="Index" asp-controller="Payment">
                             <i class="icon-credit-card menu-icon"></i><span class="nav-text">Payment</span>
                         </a>
                     </li>
@@ -305,97 +285,53 @@
 
             </div>
         </div>
-        <!--**********************************
-            Sidebar end
-        ***********************************-->
-        <!--**********************************
-            Content body start
-        ***********************************-->
+
+        @* Cotent boday part *@
         <div class="content-body">
             @RenderBody()
         </div>
-        <!--**********************************
-            Content body end
-        ***********************************-->
-        <!--**********************************
-            Footer start
-        ***********************************-->
+
+        @* Footer part *@
         <div class="footer">
             <div class="copyright">
-                <p>Copyright &copy; Designed & Developed by 
+                <p>Copyright &copy; Designed & Developed by
                     <a href="https://themeforest.net/user/quixlab">
-                    Bao Ngo Le Gia</a> 2024
+                        Bao Ngo Le Gia</a> 2024
                 </p>
             </div>
         </div>
-        <!--**********************************
-            Footer end
-        ***********************************-->
     </div>
-    <!--**********************************
-        Main wrapper end
-    ***********************************-->
-    <!--**********************************
-        Scripts
-    ***********************************-->
-   @*  <script src="plugins/common/common.min.js"></script>
-    <script src="js/custom.min.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/gleek.js"></script>
-    <script src="js/styleSwitcher.js"></script> *@
 
+
+    @* Embled code Javascript *@
     <script src="../plugins/common/common.min.js"></script>
     <script src="../js/custom.min.js"></script>
     <script src="../js/settings.js"></script>
     <script src="../js/gleek.js"></script>
     <script src="../js/styleSwitcher.js"></script>
-@*     <!-- Chartjs -->
-    <script src="./plugins/chart.js/Chart.bundle.min.js"></script>
-    <!-- Circle progress -->
-    <script src="./plugins/circle-progress/circle-progress.min.js"></script>
-    <!-- Datamap -->
-    <script src="./plugins/d3v3/index.js"></script>
-    <script src="./plugins/topojson/topojson.min.js"></script>
-    <script src="./plugins/datamaps/datamaps.world.min.js"></script>
-    <!-- Morrisjs -->
-    <script src="./plugins/raphael/raphael.min.js"></script>
-    <script src="./plugins/morris/morris.min.js"></script>
-    <!-- Pignose Calender -->
-    <script src="./plugins/moment/moment.min.js"></script>
-    <script src="./plugins/pg-calendar/js/pignose.calendar.min.js"></script>
-    <!-- ChartistJS -->
-    <script src="./plugins/chartist/js/chartist.min.js"></script>
-    <script src="./plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
-    <script src="./js/dashboard/dashboard-1.js"></script> *@
 
-    <!-- Data Table -->
+    @* Embled code other Javascript with content*@
     @RenderSection("AdditionalLinkJavascript", required: false)
-@*     <script src="./plugins/tables/js/jquery.dataTables.min.js"></script>
-    <script src="./plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
-    <script src="./plugins/tables/js/datatable-init/datatable-basic.min.js"></script> *@
 
 
+    @* Script is used to defined layout *@
     <script>
         (function ($) {
             "use strict"
-
             new quixSettings({
-                version: "light", //2 options "light" and "dark"
-                layout: "vertical", //2 options, "vertical" and "horizontal"
-                navheaderBg: "color_1", //have 10 options, "color_1" to "color_10"
-                headerBg: "color_1", //have 10 options, "color_1" to "color_10"
-                sidebarStyle: "full", //defines how sidebar should look like, options are: "full", "compact", "mini" and "overlay". If layout is "horizontal", sidebarStyle won't take "overlay" argument anymore, this will turn into "full" automatically!
-                sidebarBg: "color_1", //have 10 options, "color_1" to "color_10"
-                sidebarPosition: "static", //have two options, "static" and "fixed"
-                headerPosition: "fixed", //have two options, "static" and "fixed"
-                containerLayout: "wide",  //"boxed" and  "wide". If layout "vertical" and containerLayout "boxed", sidebarStyle will automatically turn into "overlay".
-                direction: "ltr" //"ltr" = Left to Right; "rtl" = Right to Left
+                version: "light",
+                layout: "vertical",
+                navheaderBg: "color_1",
+                headerBg: "color_1",
+                sidebarStyle: "full",
+                sidebarBg: "color_1",
+                sidebarPosition: "static",
+                headerPosition: "fixed",
+                containerLayout: "wide",
+                direction: "ltr"
             });
-
-
         })(jQuery);
     </script>
-
 </body>
 
 </html>
