--- a/Areas/Room/Views/Room/Index.cshtml
+++ b/Areas/Room/Views/Room/Index.cshtml
@@ -39,11 +39,10 @@
             </div>
         </div>
     </div>
-
     <div class="col-12 mb-30">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card text-center">
+                <div class="card">
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
@@ -116,5 +115,5 @@
 @* Link Javascript*@
 @section AdditionalLinkJavascript {
     <script src="~/js/room/room.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script> *@
 }
